crates/dasclaw_runtime/tests/snapshots/serde_agent_error_contract__agent_error_approval_rejected_no_reason.snap
---
source: crates/dasclaw_runtime/tests/serde_agent_error_contract.rs
expression: "AgentError::ApprovalRejected { tool_name: \"web_fetch\".into(), reason: None, }"
---
{
  "kind": "approval_rejected",
  "data": {
    "tool_name": "web_fetch",
    "reason": null
  }
}
