crates/dasclaw_runtime/tests/snapshots/serde_agent_error_contract__agent_error_approval_rejected_with_reason.snap
---
source: crates/dasclaw_runtime/tests/serde_agent_error_contract.rs
expression: "AgentError::ApprovalRejected\n{ tool_name: \"bash\".into(), reason: Some(\"user denied\".into()), }"
---
{
  "kind": "approval_rejected",
  "data": {
    "tool_name": "bash",
    "reason": "user denied"
  }
}
