crates/dasclaw_runtime/tests/snapshots/serde_agent_error_contract__agent_error_loop_failure.snap
---
source: crates/dasclaw_runtime/tests/serde_agent_error_contract.rs
expression: "AgentError::LoopFailure(\"hook blocked egress\".into())"
---
{
  "kind": "loop_failure",
  "data": "hook blocked egress"
}
