crates/dasclaw_runtime/tests/snapshots/serde_agent_error_contract__agent_error_max_iterations.snap
---
source: crates/dasclaw_runtime/tests/serde_agent_error_contract.rs
expression: "AgentError::MaxIterations(50)"
---
{
  "kind": "max_iterations",
  "data": 50
}
