crates/dasclaw_runtime/tests/snapshots/serde_agent_error_contract__agent_error_missing_responder.snap
---
source: crates/dasclaw_runtime/tests/serde_agent_error_contract.rs
expression: "AgentError::MissingResponder"
---
{
  "kind": "missing_responder"
}
