crates/dasclaw_runtime/tests/snapshots/serde_agent_error_contract__agent_error_responder.snap
---
source: crates/dasclaw_runtime/tests/serde_agent_error_contract.rs
expression: sample
---
{
  "kind": "responder",
  "data": "upstream provider 502 Bad Gateway"
}
